--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
     <!-- Bootstrap core CSS -->
     <link href="components/bootstrap.min.css" rel="stylesheet">
-    <link href="bower_components/bootstrap-css/css/bootstrap-theme.min.css" rel="stylesheet">
+    
+    <link rel="stylesheet" href="bower_components/bootstrap-css/css/bootstrap.min.css" media="screen">
+    <link rel="stylesheet" href="bower_components/bootstrap-css/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="components/custom.min.css">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <!--<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">-->
@@ -24,44 +27,43 @@
   </head>
 
   <body>
+    <div class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="#" class="navbar-brand">BaranOrnarli.com</a>
+          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="navbar-collapse collapse" id="navbar-main">
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Menu <span class="caret"></span></a>
+              <ul class="dropdown-menu" aria-labelledby="themes">
+                <li><a href="../default/">Default</a></li>
+                <li class="divider"></li>
+                <li><a href="../cerulean/">Cerulean</a></li>
+                <li><a href="../cosmo/">Cosmo</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">Help</a>
+            </li>
+          </ul>
 
-    <div class="site-wrapper">
-
-      <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">Cover</h3>
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Features</a></li>
-                  <li><a href="#">Contact</a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-
-          <div class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
-            </p>
-          </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            </div>
-          </div>
+          <ul class="nav navbar-nav navbar-right">
+            <li></li>
+          </ul>
 
         </div>
-
       </div>
+    </div>
 
+
+    <div class="container-fluid">
+        <div class="row col-xs-12"></div>
     </div>
 
     <!-- Bootstrap core JavaScript
