--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <title>Cover Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="components/bootstrap.min.css" rel="stylesheet">
-    
-    <link rel="stylesheet" href="bower_components/bootstrap-css/css/bootstrap.min.css" media="screen">
+    <link href="components/bootstrap.min.css" rel="stylesheet">    
     <link rel="stylesheet" href="components/custom.min.css">
+
+    <link rel="stylesheet" href="components/reveal.css">
+    <link rel="stylesheet" href="components/black.css" id="theme">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <!--<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">-->
@@ -62,7 +63,14 @@
 
 
     <div class="container-fluid">
-        <div class="row col-xs-12"></div>
+        <div class="row col-xs-12">
+            <div class="reveal">
+            <div class="slides">
+                <section>Slide 1</section>
+                <section>Slide 2</section>
+            </div>
+            </div>
+        </div>
     </div>
 
     <!-- Bootstrap core JavaScript
@@ -70,5 +78,9 @@
 
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="components/reveal.js"></script>
+    <script>
+        Reveal.initialize();
+    </script>
   </body>
 </html>
