Added some more content

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <section><p>Baran Ornarli is a software architect with expertise in Software Engineering, cyber security, and web apps.</p>
             <p style="text-align:center;"><small>Use right arrow key to continue</small></p>
             <p>
+            <span class="fragment"><img src="https://avatars0.githubusercontent.com/u/3249915?v=3&s=460" style="width: 150px; opacity: 0.7; filter: alpha(opacity=70);" /><br/></span>
             <span class="fragment">I started working professionally <script>var date1 = moment("20090610", "YYYYMMDD").fromNow();
                 document.write(date1);</script>.</span></p>
         </section>
@@ -97,9 +98,26 @@
             </table>
             
         </section>
-        <section>
-            <p>The main expertise and experiences over the years has been Python, Javascript, Java, C#. </p>
-            <p>I am a full-stack engineer that has desgined web apps including layout, front-end, back-end.</p>
+        <section><h2>Skills</h2>
+        <table>
+                <thead>
+                    <th>Skills</th>
+                    <th>Environments & tools</th>
+                    <th>Databases</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Full-stack software engineering, Cyber Security, Management, Malware Research, Vulnerability scanning, Presentations & Strategic Marketing Demos, REST services</td>
+                        <td>Linux<sup>(Ubuntu, Suse, Fedora, BackTrack)</sup>, Windows, Git, Bower, Nessus Vulnerability Scanner, Metasploit, Docker</td>
+                        <td>PostgreSQL, MySQL, MSSQL, MongoDB, Oracle</td>
+                    </tr>     
+                </tbody>
+            </table>
+        </section>
+        <section><h2>Experience</h2>
+            <p>The main expertise and experiences over the years has been Python, Javascript, Java, C#. I've developed numerous projects with Python Flask, jQuery, AngularJS, C# ASP.net MVC5, and PHP Drupal.</p>
+            <p class="fragment">I am a full-stack engineer that has desgined web apps including front-end and back-end engineering.</p>
+            <p class="fragment">I have a Bachelor of Science in Computer Engineering from Virginia Tech. I'm a Certified Ethical Hacker.</p>
         </section>
     </div>
     </div>
@@ -116,6 +134,10 @@
 				progress: true,
 				history: true,
 				center: true,
+                controls: false,
+                overview: true,
+                width: 1280,
+                height: 720,
 
 				transition: 'convex', // none/fade/slide/convex/concave/zoom
 
