--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </section>
         <section><h2>Experience</h2>
             <p>The main expertise and experiences over the years has been Python, Javascript, Java, C#. I've developed numerous projects with Python Flask, jQuery, AngularJS, MVC<sup>C#</sup>, and PHP Drupal.</p>
-            <p class="fragment">I have a Bachelor of Science in Computer Engineering from Virginia Tech. I'm a Certified Ethical Hacker.</p>
+            <p class="fragment">I have a Bachelor of Science Degree in Computer Engineering from Virginia Tech. I'm a Certified Ethical Hacker.</p>
         </section>
     </div>
     </div>
