--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               </ul>
             </li>
             <li>
-              <a href="#" ng-click="open()">Help</a>
+              <a ng-click="open()">Help</a>
             </li>
           </ul>
 
