--- a/modal.html
+++ b/modal.html
@@ -1,3 +1,4 @@
+<html>
 <div class="modal-header">
         <h3 class="modal-title">Help</h3>
     </div>
@@ -7,3 +8,4 @@
         <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
         <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
     </div>
+    </html>
