--- a/modal.html
+++ b/modal.html
@@ -3,6 +3,7 @@
         <h3 class="modal-title">Help</h3>
     </div>
     <div class="modal-body">
+        What did you need assistance with? Please send a message using <a href="http://www.linkedin.com/in/BaranOrnarli">LinkedIn</a>.
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
