--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 
     <div class="reveal">
     <div class="slides">
-        <section><p>Baran Ornarli is a full-stack software architect with expertise in Software Engineering, cyber security, and web apps.</p>
+        <section><p>Baran Ornarli is a software architect and manager with expertise in Software Engineering, cyber security, big data, machine learning, cloud, and web app frameworks.</p>
             <p style="text-align:center;"><small>Use right arrow key to continue</small></p>
             <p>
             <span class="fragment"><img src="https://avatars0.githubusercontent.com/u/3249915?v=3&s=150" style="width: 150px; opacity: 0.7; filter: alpha(opacity=70);" /><br/></span>
             <span class="fragment">Professional Experience: <script>var date1 = moment("20090610", "YYYYMMDD").fromNow();
                 document.write(date1.split(' ago')[0]);</script></span></p>
-            <p class="fragment">Currently working as a Software Architect & Lead Technologist at Booz Allen Hamilton, Inc.</p>
+            <p class="fragment">Currently working as a Software Architect & Senior Lead Technologist at Booz Allen Hamilton, Inc.</p>
         </section>
         <section><h2>Software Engineering Expertise</h2>
             <table>
@@ -90,8 +90,8 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>C/C++, Python<sup>2/3</sup>, Javascript, Java<sup>8</sup>, Typescript, PHP, C#</td>
-                        <td><a href="https://angularjs.org/">AngularJS<sup>1/2</sup></a>, <a href="http://aurelia.io/">Aurelia<sup>1</sup></a>, <a href="http://flask.pocoo.org/">Flask<sup>0.11</sup></a>, <a href="http://sparkjava.com/">Spark<sup>2</sup></a>, jQuery<sup>1/2</sup>, jQuery UI, MVC5, Drupal, Angular Bootstrap<sup>front-end</sup>, Qt<sup>desktop</sup>, Win32 API<sup>desktop</sup>, kivy<sup>mobile</sup>, OpenLayers<sup>GIS</sup>, Leaflet<sup>GIS</sup></td>
+                        <td>C, C++<sup>17</sup>, Python<sup>3.7</sup>, Javascript, Java<sup>8</sup>, ES<sup>9</sup>, MASM32</td>
+                        <td><a href="https://angularjs.org/">AngularJS</a>, <a href="http://aurelia.io/">Aurelia</a>, <a href="http://flask.pocoo.org/">Flask</a>, <a href="https://pgjones.gitlab.io/quart/">Quart</a>, <a href="http://sparkjava.com/">Spark<sup>2</sup></a>, Pandas, Ray, jQuery<sup>2</sup>, Qt, Win32 API, kivy<sup>mobile</sup>, Leaflet<sup>GIS</sup></td>
                     </tr>                    
                     <tr>
                         <td></td>
@@ -110,16 +110,17 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Full-stack software engineering, Cyber Security, Management, Malware Research, Vulnerability scanning, Presentations & Strategic Marketing Demos, REST services</td>
-                        <td>Linux<sup>(Ubuntu, Suse, Fedora, BackTrack)</sup>, Windows, Git, Bower, Nessus Vulnerability Scanner, Metasploit, Docker</td>
-                        <td>PostgreSQL, MySQL, MSSQL, MongoDB, Oracle</td>
+                        <td>Full-stack software engineering, Cyber Security, Management, Malware Research, Vulnerability scanning, Presentations & Strategic Marketing Demos, Business Proposals, REST services</td>
+                        <td>Linux<sup>(Ubuntu, Suse, Fedora, CentOS7, RHEL, Kali)</sup>, Windows, Git, Kubernetes, Nessus Vulnerability Scanner, Metasploit, Docker</td>
+                        <td>Elasticsearch, Apache HBase, HDFS, Spark, NiFi, Solr, Accumulo, Impala, DynamoDB, and PostgreSQL</td>
                     </tr>     
                 </tbody>
             </table>
         </section>
         <section><h2>Experience</h2>
-            <p>The main expertise and experiences over the years has been Python, Javascript, Java, C#. I've developed numerous projects with Python Flask, jQuery, AngularJS, MVC<sup>C#</sup>, and PHP Drupal.</p>
-            <p class="fragment">I have a Bachelor of Science Degree in Computer Engineering from Virginia Tech. I'm a Certified Ethical Hacker.</p>
+            <p>The main expertise and experiences over the years has been Python, Javascript, Java, C, C++, ES9. I've developed numerous projects with Python Flask, Spring Boot, jQuery, AngularJS, Aurelia, AWS, and Big Data.</p>
+            <p class="fragment">I have a Bachelor of Science Degree in Computer Engineering from Virginia Tech. </p>
+            <p class="fragment">Certificates: Linux+, Security+, Certified Ethical Hacker</p>
         </section>
     </div>
     </div>
