update css and pages

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <!-- Bootstrap core CSS -->
 
-    <link rel="stylesheet" href="components/reveal.css">
-    <link rel="stylesheet" href="components/black.css" id="theme"> 
-    <link href="components/bootstrap.min.css" rel="stylesheet">   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/css/reveal.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/css/theme/black.min.css" id="theme"> 
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">   
     <link rel="stylesheet" href="components/custom.min.css">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
@@ -77,12 +77,12 @@
         <section><p>Baran Ornarli is a software architect and manager with expertise in Software Engineering, cyber security, big data, machine learning, cloud, and web app frameworks.</p>
             <p style="text-align:center;"><small>Use right arrow key to continue</small></p>
             <p>
-            <span class="fragment"><img src="https://avatars0.githubusercontent.com/u/3249915?v=3&s=150" style="width: 150px; opacity: 0.7; filter: alpha(opacity=70);" /><br/></span>
+            <span class="fragment"><img src="https://avatars0.githubusercontent.com/u/3249915?v=3&s=150" style="width: 150px; opacity: 0.9; filter: alpha(opacity=90);" /><br/></span>
             <span class="fragment">Professional Experience: <script>var date1 = moment("20090610", "YYYYMMDD").fromNow();
                 document.write(date1.split(' ago')[0]);</script></span></p>
             <p class="fragment">Currently working as a Software Architect & Senior Lead Technologist at Booz Allen Hamilton, Inc.</p>
         </section>
-        <section><h2>Software Engineering Expertise</h2>
+        <section><h2>Software Architecture Expertise</h2>
             <table>
                 <thead>
                     <th>Language Expertise</th>
@@ -91,7 +91,7 @@
                 <tbody>
                     <tr>
                         <td>C, C++<sup>17</sup>, Python<sup>3.7</sup>, Javascript, Java<sup>8</sup>, ES<sup>9</sup>, MASM32</td>
-                        <td><a href="https://angularjs.org/">AngularJS</a>, <a href="http://aurelia.io/">Aurelia</a>, <a href="http://flask.pocoo.org/">Flask</a>, <a href="https://pgjones.gitlab.io/quart/">Quart</a>, <a href="http://sparkjava.com/">Spark<sup>2</sup></a>, Pandas, Ray, jQuery<sup>2</sup>, Qt, Win32 API, kivy<sup>mobile</sup>, Leaflet<sup>GIS</sup></td>
+                        <td><a href="https://angularjs.org/">AngularJS</a>, <a href="http://aurelia.io/">Aurelia</a>, <a href="http://flask.pocoo.org/">Flask</a>, <a href="https://pgjones.gitlab.io/quart/">Quart</a>, <a href="https://expressjs.com">Express.js</a>, <a href="http://sparkjava.com/">Spark<sup>2</sup></a>, Pandas, Ray, jQuery<sup>2</sup>, Qt, Win32 API, kivy<sup>mobile</sup>, Leaflet<sup>GIS</sup></td>
                     </tr>                    
                     <tr>
                         <td></td>
@@ -101,7 +101,7 @@
             </table>
             
         </section>
-        <section><h2>Skills</h2>
+        <section><h2>Technologies</h2>
         <table>
                 <thead>
                     <th>Skills</th>
@@ -110,17 +110,18 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Full-stack software engineering, Cyber Security, Management, Malware Research, Vulnerability scanning, Presentations & Strategic Marketing Demos, Business Proposals, REST services</td>
+                        <td>Software Engineering, Cyber Security, Penetration testing, Malware Research, Business Development, Management, Strategic Marketing Demos, Business Proposals</td>
                         <td>Linux<sup>(Ubuntu, Suse, Fedora, CentOS7, RHEL, Kali)</sup>, Windows, Git, Kubernetes, Nessus Vulnerability Scanner, Metasploit, Docker</td>
-                        <td>Elasticsearch, Apache HBase, HDFS, Spark, NiFi, Solr, Accumulo, Impala, DynamoDB, and PostgreSQL</td>
+                        <td>Elasticsearch, Apache HBase, HDFS, Spark, NiFi, Solr, Accumulo, Impala, DynamoDB, Redis, and PostgreSQL</td>
                     </tr>     
                 </tbody>
             </table>
         </section>
         <section><h2>Experience</h2>
-            <p>The main expertise and experiences over the years has been Python, Javascript, Java, C, C++, ES9. I've developed numerous projects with Python Flask, Spring Boot, jQuery, AngularJS, Aurelia, AWS, and Big Data.</p>
-            <p class="fragment">I have a Bachelor of Science Degree in Computer Engineering from Virginia Tech. </p>
-            <p class="fragment">Certificates: Linux+, Security+, Certified Ethical Hacker</p>
+            <p>Main expertise in Python, Javascript, Java, C, C++, ES9. Engineered an arsenal of projects with Python Flask, Spring Boot, jQuery, AngularJS, Aurelia, AWS, and Big Data.</p>
+            <p class="fragment">Specialized functional knowledge in DoD market with a wide range of clients.</p>
+            <p class="fragment">Bachelor of Science Degree in Computer Engineering from Virginia Tech.</p>
+            <p class="fragment">Certificates: <strong>Linux+, Security+, Certified Ethical Hacker</strong></p>
         </section>
     </div>
     </div>
@@ -128,11 +129,11 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
 
-    <script src="bower_components/angular/angular.min.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular-animate.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
     <script src="components/lib/js/head.min.js"></script>
-    <script src="components/reveal.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/js/reveal.min.js"></script>
     <script src="components/BaranApp.js"></script>
     <script>
         Reveal.initialize({
